<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"

        android:background="@drawable/header"

        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"

        />

    <RadioGroup

        android:id="@+id/radiogp1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer1"
            android:background="@drawable/header"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"


            />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer2"
            android:background="@drawable/header"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"/>

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer3"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:background="@drawable/header"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"/>

        <RadioButton
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer4"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:background="@drawable/header"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"/>

        <RadioButton
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer5"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:background="@drawable/header"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"/>


    </RadioGroup>



</LinearLayout>